# core-backend

./: .dockerignore  .env.example  .env.production  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.manage.yml  docker-compose.prod.web.yml  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  deployment.yml
api/: urls.py  views.py
apps/: __init__.py
apps/users/: __init__.py  models.py  serializers.py
authentication/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
brokers/: admin.py  apps.py  serializers.py  urls.py  views.py
brokers/admin/: __init__.py  category.py  product.py
brokers/management/commands/: create_sample_data.py
brokers/migrations/: 0001_initial.py
brokers/models/: __init__.py  category.py  product.py
core/: settings.py  urls.py  utils.py
nginx/: nginx.conf
profiles/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
scripts/: deploy.sh  entrypoint.sh  setup.sh
static/css/: styles.css
static/js/: script.js
tests/: test_authentication.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
